# gosub-gtk

./: Cargo.toml  README.md  build.rs  style.css
resources/: main_menu.ui  resources.gresource.xml  style.css  window.ui
src/: application.rs  favicon.rs  fetcher.rs  gosub_tab_impl.rs  main.rs  settings.rs  tab.rs  tab_wiget.rs  utils.rs  window.rs
src/dialog/: about.rs
src/dialogs/: mod.rs
src/window/: imp.rs  message.rs  mod.rs
