[package]
name = "gosub-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
chrono = { version = "0.4.31", features = [] }
reqwest = {  version = "0.12.9", features = ["blocking"] }
image = "0.25.4"

[build-dependencies]
glib-build-tools = "0.18.0"
